refactor: replace `UserPrincipal` with `UserPrincipalAdapter`, update services and security checks
- Removed `UserPrincipal` class and replaced references with `UserPrincipalAdapter`.
- Simplified authentication logic across controllers and services.
- Refactored exception handling for role and ownership validations.
- Updated annotation messages to use centralized `ValidationMessages`.